finalised home page code:0

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="images/page genral contents/region-code.png" type="image/x-icon" background-color="white" ;>
     <title>Guide</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="./js/app.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@500&display=swap" rel="stylesheet">
 </head>
@@ -126,8 +127,8 @@
         <h1 class="hprimary topic"> Mumbai </h1>
         <div id="mchoose">
             <div class="mname">
-                <div class="pimage"><a href="mumbai/beach.html">
-                        <img src="https://source.unsplash.com/random/245x200" alt="image ">
+                <div class="mumimage"><a href="mumbai/beach.html">
+                        <img src="./images/contentimg/mumbai/mumbai_beach.jpg" alt="image ">
                 </div>
                 <h1 class="hsecondary">Beaches</h1>
                 <ul class="mumbeach" id="mumbeach">
@@ -137,8 +138,8 @@
                 </a>
             </div>
             <div class="mname">
-                <div class="pimage"><a href="mumbai/caves.html">
-                        <img src="https://source.unsplash.com/random/245x200" alt="image">
+                <div class="mumimage"><a href="mumbai/caves.html">
+                        <img src="./images/contentimg/mumbai/mumbai_caves.jpg" alt="image">
                 </div>
                 <h1 class="hsecondary">Caves</h1>
                 <ul class="mumcave" id="mumcave">
@@ -148,8 +149,8 @@
                 </a>
             </div>
             <div class="mname">
-                <div class="pimage"><a href="mumbai/monuments.html">
-                        <img src="https://source.unsplash.com/random/245x200" alt="image">
+                <div class="mumimage"><a href="mumbai/monuments.html">
+                        <img src="./images/contentimg/mumbai/mumbai_monument.jpg" alt="image">
                 </div>
                 <h1 class="hsecondary">Monuments</h1>
                 <ul class="mummonument" id="mummonument">
@@ -159,8 +160,8 @@
                 </a>
             </div>
             <div class="mname">
-                <div class="pimage"><a href="mumbai/zoo_and_gardern.html">
-                        <img src="https://source.unsplash.com/random/245x200" alt="image">
+                <div class="mumimage"><a href="mumbai/zoo_and_gardern.html">
+                        <img src="./images/contentimg/mumbai/mumbai_zoo.jpg" alt="image">
                 </div>
                 <h1 class="hsecondary">Zoo and Garderns</h1>
                 <ul class="mumzoo" id="mumzoo">
@@ -181,7 +182,7 @@
         <div id="pchoose">
             <div class="pnname"><a href="pune/biological_park.html">
                     <div class="pnimage">
-                        <img src="https://source.unsplash.com/random/245x200" alt="image ">
+                        <img src="./images/contentimg/pune/pune_snakepark.jpg" alt="image ">
                     </div>
                     <h1 class="hsecondary">Biological park</h1>
                     <ul class="punbiological" id="punbiological">
@@ -192,7 +193,7 @@
             </div>
             <div class="pnname"><a href="pune/monuments.html">
                     <div class="pnimage">
-                        <img src="https://source.unsplash.com/random/245x200" alt="image">
+                        <img src="./images/contentimg/pune/pune_monuments.jpg" alt="image">
                     </div>
                     <h1 class="hsecondary">Monuments</h1>
                     <ul class="punmonument" id="punmonument">
@@ -203,7 +204,7 @@
             </div>
             <div class="pnname"><a href="pune/trek_and_gardern.html">
                     <div class="pnimage">
-                        <img src="https://source.unsplash.com/random/245x200" alt="image">
+                        <img src="./images/contentimg/pune/pune_trek.jpg" alt="image">
                     </div>
                     <h1 class="hsecondary">Trek and Garderns</h1>
                     <ul class="puntrek" id="puntrek">
@@ -214,7 +215,7 @@
             </div>
             <div class="pnname"><a href="pune/waterbodies.html">
                     <div class="pnimage">
-                        <img src="https://source.unsplash.com/random/245x200" alt="image">
+                        <img src="./images/contentimg/pune/pune_waterbodies.jpg" alt="image">
                     </div>
                     <h1 class="hsecondary">Waterbodies</h1>
                     <ul class="punwater" id="punwater">
@@ -238,7 +239,7 @@
         <div id="nchoose">
             <div class="nkname"><a href="nasik/monuments.html">
                     <div class="nkimage">
-                        <img src="https://source.unsplash.com/random/245x200" alt="image ">
+                        <img src="./images/contentimg/nasik/nasik_monument.jpg" alt="image ">
                     </div>
                     <h1 class="hsecondary">Monuments</h1>
                     <ul class="nkmonument" id="nkmonument">
@@ -249,7 +250,7 @@
             </div>
             <div class="nkname"><a href="nasik/religious_place.html">
                     <div class="nkimage">
-                        <img src="https://source.unsplash.com/random/245x200" alt="image">
+                        <img src="./images/contentimg/nasik/nasik_religiousplace.jpg" alt="image">
                     </div>
                     <h1 class="hsecondary">Religious Places </h1>
                     <ul class="nkrp" id="nkrp">
@@ -261,11 +262,10 @@
             </div>
             <div class="nkname"><a href="nasik/trek.html">
                     <div class="nkimage">
-                        <img src="https://source.unsplash.com/random/245x200" alt="image">
+                        <img src="./images/contentimg/nasik/nasik_trek.jpg" alt="image">
                     </div>
-                    <h1 class="hsecondary">trek</h1>
+                    <h1 class="hsecondary">Trek and Vineyards</h1>
                     <ul class="nktrek" id="nktrek">
-                        <li>Harihar Fort</li>
                         <li>Brahmagiri</li>
                         <li>Sula Vineyards</li>
                     </ul>
@@ -273,7 +273,7 @@
             </div>
             <div class="nkname"><a href="nasik/waterfall.html">
                     <div class="nkimage">
-                        <img src="https://source.unsplash.com/random/245x200" alt="image">
+                        <img src="./images/contentimg/nasik/nasik_waterfall.jpg" alt="image">
                     </div>
                     <h1 class="hsecondary">Waterfall</h1>
                     <ul class="nkwater" id="nkwater">
@@ -294,28 +294,28 @@
         <div id="aechoose">
             <div class="aename"><a href="ajanta_ellora/ajanta_caves.html">
                     <div class="aeimage">
-                        <img src="https://source.unsplash.com/random/245x200" alt="image ">
+                        <img src="./images/contentimg/ajanta_ellora/Ajanta_Caves.jpg" alt="image ">
                     </div>
                     <h1 class="hsecondary">Ajanta Caves</h1>
                 </a>
             </div>
             <div class="aename"><a href="ajanta_ellora/ellora_caves.html">
                     <div class="aeimage">
-                        <img src="https://source.unsplash.com/random/245x200" alt="image">
+                        <img src="./images/contentimg/ajanta_ellora/ellora_caves.jpg" alt="image">
                     </div>
                     <h1 class="hsecondary">Ellora Caves</h1>
                 </a>
             </div>
             <div class="aename"><a href="ajanta_ellora/daulatabad_fort.html">
                     <div class="aeimage">
-                        <img src="https://source.unsplash.com/random/245x200" alt="image">
+                        <img src="./images/contentimg/ajanta_ellora/Daulatabad_Fort.jpg" alt="image">
                     </div>
                     <h1 class="hsecondary">Daulatabad fort</h1>
                 </a>
             </div>
             <div class="aename"><a href="ajanta_ellora/goga_baba_hill.html">
                     <div class="aeimage">
-                        <img src="https://source.unsplash.com/random/245x200" alt="image">
+                        <img src="./images/contentimg/ajanta_ellora/gogababahill.jpg" alt="image">
                     </div>
                     <h1 class="hsecondary">Goga baba hill </h1>
                 </a>
@@ -333,7 +333,7 @@
         <div id="lachoose">
             <div class="laname"><a href="lonavala/caves.html">
                     <div class="laimage">
-                        <img src="https://source.unsplash.com/random/245x200" alt="image ">
+                        <img src="./images/contentimg/lonavala/lonavala_caves.jpg" alt="image ">
                     </div>
                     <h1 class="hsecondary">Caves</h1>
                     <ul class="lcave" id="lcave">
@@ -344,7 +344,7 @@
             </div>
             <div class="laname"><a href="lonavala/monumnts.html">
                     <div class="laimage">
-                        <img src="https://source.unsplash.com/random/245x200" alt="image">
+                        <img src="./images/contentimg/lonavala/lonavala_fort.jpg" alt="image">
                     </div>
                     <h1 class="hsecondary">Monuments</h1>
                     <ul class="lmonument" id="lmonument">
@@ -355,7 +355,7 @@
             </div>
             <div class="laname"><a href="lonavala/trek_point.html">
                     <div class="laimage">
-                        <img src="https://source.unsplash.com/random/245x200" alt="image">
+                        <img src="./images/contentimg/lonavala/lonawala_trek.jpg" alt="image">
                     </div>
                     <h1 class="hsecondary">Trek Points</h1>
                     <ul class="ltp" id="ltp">
@@ -366,7 +366,7 @@
             </div>
             <div class="laname"><a href="lonavala/waterbodies.html">
                     <div class="laimage">
-                        <img src="https://source.unsplash.com/random/245x200" alt="image">
+                        <img src="./images/contentimg/lonavala/lonavala_lake.jpg" alt="image">
                     </div>
                     <h1 class="hsecondary">Waterbodies</h1>
                     <ul class="lwater" id="lwater">
