completed the gallery linking code:0

--- a/ajanta_ellora/daulatabad_fort.html
+++ b/ajanta_ellora/daulatabad_fort.html
@@ -16,10 +16,12 @@
     <!-- navigation bar content -->
     <!-- -------------------------------------------------------------------------------------------------------- -->
     <!-- all css is found in  navigation  -->
-    
+
     <nav>
         <div class="logo">
-            <a href="../index.html"><h4>Toraberu</h4></a>
+            <a href="../index.html">
+                <h4>Toraberu</h4>
+            </a>
         </div>
         <ul class="nav-links">
             <li class="header" id="place two"><a href="../index.html#mumbai">Mumbai</a></li>
@@ -43,6 +45,7 @@
                 <li class="other r1 present" id="other1"><a href="./daulatabad_fort.html">Daulatabad Fort</a></li>
                 <li class="other r1" id="other2"><a href="./ellora_caves.html">Ellora Caves</a></li>
                 <li class="other r1" id="other3"><a href="./goga_baba_hill.html">Goga Baba Hills</a></li>
+                <li class="other r1" id="other3"><a href="./aurangabad_gallery.html">Gallery</a></li>
             </ul>
         </div>
         <h2 class="r3">Daulatabad fort</h2>
@@ -114,4 +117,5 @@
 
 </body>
 <script src="./js/app.js"></script>
+
 </html>
