--- a/lonavala/monumnts.html
+++ b/lonavala/monumnts.html
@@ -16,10 +16,12 @@
     <!-- navigation bar content -->
     <!-- -------------------------------------------------------------------------------------------------------- -->
     <!-- all css is found in  navigation  -->
-    
+
     <nav>
         <div class="logo">
-            <a href="../index.html"><h4>Toraberu</h4></a>
+            <a href="../index.html">
+                <h4>Toraberu</h4>
+            </a>
         </div>
         <ul class="nav-links">
             <li class="header" id="place two"><a href="../index.html#mumbai">Mumbai</a></li>
@@ -43,6 +45,7 @@
                 <li class="other r1 present" id="other1"><a href="./monumnts.html">Monuments</a></li>
                 <li class="other r1" id="other2"><a href="./trek_point.html">Trek point</a></li>
                 <li class="other r1" id="other3"><a href="./waterbodies.html">Waterbodies</a></li>
+                <li class="other r1" id="other3"><a href="./lonavala_gallery.html">Gallery</a></li>
             </ul>
         </div>
         <h2 class="r3">Sunil's Celebrity Wax Museum</h2>
@@ -141,4 +144,5 @@
 
 </body>
 <script src="./js/app.js"></script>
+
 </html>
