--- a/pune/trek_and_gardern.html
+++ b/pune/trek_and_gardern.html
@@ -16,10 +16,12 @@
     <!-- navigation bar content -->
     <!-- -------------------------------------------------------------------------------------------------------- -->
     <!-- all css is found in  navigation  -->
-    
+
     <nav>
         <div class="logo">
-            <a href="../index.html"><h4>Toraberu</h4></a>
+            <a href="../index.html">
+                <h4>Toraberu</h4>
+            </a>
         </div>
         <ul class="nav-links">
             <li class="header" id="place two"><a href="../index.html#mumbai">Mumbai</a></li>
@@ -43,6 +45,7 @@
                 <li class="other r1" id="other1"><a href="./monuments.html">Monuments</a></li>
                 <li class="other r1 present" id="other2"><a href="./trek_and_gardern.html">Trek and Garderns</a></li>
                 <li class="other r1" id="other3"><a href="./waterbodies.html">Waterbodies</a></li>
+                <li class="other r1" id="other4"><a href="./pune_gallery.html">Gallery</a></li>
             </ul>
         </div>
         <h2 class="r3">Sinhagad Fort</h2>
@@ -86,7 +89,7 @@
         <h4 class="r3">Pune-Okayama Friendship Garden </h4>
         <div id="img">
         </div>
-         <div class="reach" id="reach">
+        <div class="reach" id="reach">
             <h3 class="r24 bmn">Info</h3>
             <p class="r1 bmn">
                 Pune-Okayama Friendship Garden or Pu La Deshpande Udyan is one of the largest gardens in Pune located on
@@ -152,4 +155,5 @@
 
 </body>
 <script src="./js/app.js"></script>
+
 </html>
