--- a/mumbai/caves.html
+++ b/mumbai/caves.html
@@ -16,10 +16,12 @@
     <!-- navigation bar content -->
     <!-- -------------------------------------------------------------------------------------------------------- -->
     <!-- all css is found in  navigation  -->
-    
+
     <nav>
         <div class="logo">
-            <a href="../index.html"><h4>Toraberu</h4></a>
+            <a href="../index.html">
+                <h4>Toraberu</h4>
+            </a>
         </div>
         <ul class="nav-links">
             <li class="header" id="place two"><a href="../index.html#mumbai">Mumbai</a></li>
@@ -43,6 +45,7 @@
                 <li class="other r1 present" id="other1"><a href="./caves.html">Caves</a></li>
                 <li class="other r1" id="other2"><a href="./monuments.html">Monuments</a></li>
                 <li class="other r1" id="other3"><a href="./zoo_and_gardern.html">zoo_and_Garden</a></li>
+                <li class="other r1" id="other3"><a href="./mumbai_gallery.html">Gallery</a></li>
             </ul>
         </div>
 
@@ -92,7 +95,9 @@
         <div class="reach bmn" id="reach">
             <h3 class="r24 bmn">Info</h3>
             <p class="r1 bmn">
-                The Kanheri Caves are a group of caves and rock-cut monuments cut into a massive basalt outcrop in the forests of the Sanjay Gandhi National Park, on the former island of Salsette in the western outskirts of Mumbai, India.</p><br>
+                The Kanheri Caves are a group of caves and rock-cut monuments cut into a massive basalt outcrop in the
+                forests of the Sanjay Gandhi National Park, on the former island of Salsette in the western outskirts of
+                Mumbai, India.</p><br>
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 bmn">
                 There are several ways of getting to the Kanheri Caves from the Mumbai Airport: -You can take the
@@ -151,4 +156,5 @@
 
 </body>
 <script src="./js/app.js"></script>
+
 </html>
