--- a/mumbai/monuments.html
+++ b/mumbai/monuments.html
@@ -16,10 +16,12 @@
     <!-- navigation bar content -->
     <!-- -------------------------------------------------------------------------------------------------------- -->
     <!-- all css is found in  navigation  -->
-    
+
     <nav>
         <div class="logo">
-            <a href="../index.html"><h4>Toraberu</h4></a>
+            <a href="../index.html">
+                <h4>Toraberu</h4>
+            </a>
         </div>
         <ul class="nav-links">
             <li class="header" id="place two"><a href="../index.html#mumbai">Mumbai</a></li>
@@ -44,6 +46,7 @@
                 <li class="other r1" id="other1"><a href="./caves.html">Caves</a></li>
                 <li class="other r1 present" id="other2"><a href="./monuments.html">Monuments</a></li>
                 <li class="other r1" id="other3"><a href="./zoo_and_gardern.html">zoo_and_Garden</a></li>
+                <li class="other r1" id="other3"><a href="./mumbai_gallery.html">Gallery</a></li>
             </ul>
         </div>
 
@@ -140,4 +143,5 @@
 
 </body>
 <script src="./js/app.js"></script>
+
 </html>
