added image to monument pune and some other change

--- a/pune/monuments.html
+++ b/pune/monuments.html
@@ -82,7 +82,7 @@
         </iframe>
 
         <h4 class="r3">Aga Khan Palace </h4>
-        <div id="img">
+        <div id="img1">
         </div>
         <div class="reach" id="reach">
             <h3 class="r24 bmn tmn">Info</h3>
