--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
                     <h2>Review</h2>
                 </section>
                 <p>
-                    Write a review to make the service better on <a
+                    Write a review to make the service better on <a class="hovli"
                         href="mailto:toaddress@email.com">toreviewaddress@email.com</a>
                 </p>
             </div>
@@ -48,7 +48,7 @@
                     <img src="./images/logo/exchange.png" alt="" class="image">
                     <h2>Request changes</h2>
                 </section>
-                <p>If you find any conflicting information on any part of page kindly let us know at <a
+                <p>If you find any conflicting information on any part of page kindly let us know at <a class="hovli"
                         href="mailto:toaddress@email.com">toaddress@mail.com</a></p>
             </div>
             <div class="link" id="link">
@@ -56,7 +56,7 @@
                     <img src="./images/logo/blogger-logotype.png" alt="" class="image">
                     <h2>Link your blog</h2>
                 </section>
-                <p>Share your experience, if you write blogs get it featured from us at <a
+                <p>Share your experience, if you write blogs get it featured from us at <a class="hovli"
                         href="mailto:toaddress@email.com">toaddress@mail.com</a></p>
             </div>
         </div>
