added images and changes in aurangabad code:0

--- a/ajanta_ellora/Trek_zoo.html
+++ b/ajanta_ellora/Trek_zoo.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="../images/page genral contents/region-code.png" type="image/x-icon" background-color="white"
         ;>
     <title>Ajanta Ellora | Goga baba hill </title>
-    <link rel="stylesheet" href="css/goga_baba_hill.css">
+    <link rel="stylesheet" href="css/trek_zoo.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@500&display=swap" rel="stylesheet">
 </head>
@@ -83,7 +83,7 @@
         </iframe>
         </iframe>
         <h2 class="r3">Siddharth Garden and Zoo Aurangabad</h2>
-        <div id="img">
+        <div id="img1">
 
         </div>
         <div class="reach bmn" id="reach">
