--- a/ajanta_ellora/fort.html
+++ b/ajanta_ellora/fort.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="../images/page genral contents/region-code.png" type="image/x-icon" background-color="white"
         ;>
     <title>Ajanta Ellora | Daulatabad Fort</title>
-    <link rel="stylesheet" href="css/daulatabad_fort.css">
+    <link rel="stylesheet" href="css/fort.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@500&display=swap" rel="stylesheet">
 </head>
@@ -84,7 +84,7 @@
         </iframe>
 
         <h2 class="r3">Bibi Ka Maqbara</h2>
-        <div id="img">
+        <div id="img1">
 
         </div>
         <div class="reach bmn" id="reach">
