--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
     <!-- navigation bar content -->
     <!-- -------------------------------------------------------------------------------------------------------- -->
     <!-- all css is found in  navigation  -->
-    
+
     <nav>
         <div class="logo">
-            <a href="#top"><h4>Toraberu</h4></a>
+            <a href="#top">
+                <h4>Toraberu</h4>
+            </a>
         </div>
         <ul class="nav-links">
             <li class="header" id="place two"><a href="#mumbai">Mumbai</a></li>
@@ -100,11 +102,12 @@
                     <div class="pimage">
                         <img src="./images/place/tinified/ajanta_ellora.jpg" alt="image">
                     </div>
-                    <h1 class="hsecondary">Ajanta Ellora</h1>
-                    <p class="psecondary">The Ajanta Caves are approximately 30 rock-cut Buddhist cave monuments which
-                        date from the 2nd century BCE to about 480 CE.Ellora is a UNESCO World Heritage Site located in
-                        the Aurangabad district of Maharashtra, India. It is one of the largest rock-cut
-                        monastery-temple cave complexes in the world, dating from the 600–1000 CE period.</p>
+                    <h1 class="hsecondary">Aurangabad</h1>
+                    <p class="psecondary">Aurangabad is a city in Maharashtra state, in India. It’s known for the
+                        17th-century marble Bibi ka Maqbara shrine, styled on the Taj Mahal. The nearby Shivaji Maharaj
+                        Museum, dedicated to the Maratha king Shivaji, displays war weapons and a coin collection. North
+                        of the city, the Aurangabad Caves comprise ancient, rock-cut Buddhist shrines. West of the city,
+                        battlements surround the medieval Daulatabad Fort. </p>
                 </a>
             </div>
             <div class="name"><a href="#lonavala">
@@ -296,32 +299,32 @@
     <section class="ajanta" id="ajanta">
         <h1 class="hprimary topic"> Aurangabad </h1>
         <div id="aechoose">
-            <div class="aename"><a href="ajanta_ellora/ajanta_caves.html">
+            <div class="aename"><a href="ajanta_ellora/caves.html">
                     <div class="aeimage">
                         <img src="./images/contentimg/ajanta_ellora/Ajanta_Caves.jpg" alt="image ">
                     </div>
-                    <h1 class="hsecondary">Ajanta Caves</h1>
+                    <h1 class="hsecondary">Caves</h1>
                 </a>
             </div>
-            <div class="aename"><a href="ajanta_ellora/ellora_caves.html">
+            <div class="aename"><a href="ajanta_ellora/fort.html">
+                <div class="aeimage">
+                    <img src="./images/contentimg/ajanta_ellora/Daulatabad_Fort.jpg" alt="image">
+                </div>
+                <h1 class="hsecondary">Forts</h1>
+            </a>
+        </div>
+            <div class="aename"><a href="ajanta_ellora/religious_place.html">
                     <div class="aeimage">
                         <img src="./images/contentimg/ajanta_ellora/ellora_caves.jpg" alt="image">
                     </div>
-                    <h1 class="hsecondary">Ellora Caves</h1>
+                    <h1 class="hsecondary">Religious places</h1>
                 </a>
             </div>
-            <div class="aename"><a href="ajanta_ellora/daulatabad_fort.html">
-                    <div class="aeimage">
-                        <img src="./images/contentimg/ajanta_ellora/Daulatabad_Fort.jpg" alt="image">
-                    </div>
-                    <h1 class="hsecondary">Daulatabad fort</h1>
-                </a>
-            </div>
-            <div class="aename"><a href="ajanta_ellora/goga_baba_hill.html">
+            <div class="aename"><a href="ajanta_ellora/Trek_zoo.html">
                     <div class="aeimage">
                         <img src="./images/contentimg/ajanta_ellora/gogababahill.jpg" alt="image">
                     </div>
-                    <h1 class="hsecondary">Goga baba hill </h1>
+                    <h1 class="hsecondary">Trek & Zoo </h1>
                 </a>
             </div>
         </div>
