--- a/lonavala/caves.html
+++ b/lonavala/caves.html
@@ -86,7 +86,7 @@
         </iframe>
 
         <h2 class="r3">Bhaja Buddhist Caves</h2>
-        <div id="img">
+        <div id="img1">
 
         </div>
         <div class="reach bmn" id="reach">
