--- a/lonavala/monumnts.html
+++ b/lonavala/monumnts.html
@@ -78,7 +78,7 @@
         </iframe>
 
         <h2 class="r3">Lohagad Fort</h2>
-        <div id="img">
+        <div id="img1">
 
         </div>
         <div class="reach bmn" id="reach">
