--- a/mumbai/beach.html
+++ b/mumbai/beach.html
@@ -86,7 +86,7 @@
         </iframe>
 
         <h4 class="r3">Marine Drive Beach </h4>
-        <div id="img">
+        <div id="img1">
         </div>
         <div class="reach bmn" id="reach">
             <h3 class="r24 bmn">Info</h3>
