--- a/mumbai/caves.html
+++ b/mumbai/caves.html
@@ -89,7 +89,7 @@
         </iframe>
 
         <h2 class="r3">Kanheri Caves</h2>
-        <div id="img">
+        <div id="img1">
 
         </div>
         <div class="reach bmn" id="reach">
