--- a/mumbai/zoo_and_gardern.html
+++ b/mumbai/zoo_and_gardern.html
@@ -86,7 +86,7 @@
         </iframe>
         </iframe>
         <h2 class="r3">Hanging Gardens</h2>
-        <div id="img">
+        <div id="img1">
 
         </div>
         <div class="reach bmn" id="reach">
