--- a/nasik/monuments.html
+++ b/nasik/monuments.html
@@ -79,7 +79,7 @@
         </iframe>
 
         <h2 class="r3">Harihar Fort</h2>
-        <div id="img">
+        <div id="img1">
 
         </div>
         <div class="reach bmn" id="reach">
