--- a/nasik/religious_place.html
+++ b/nasik/religious_place.html
@@ -79,7 +79,7 @@
         </iframe>
 
         <h2 class="r3">Sri Kalaram Mandir</h2>
-        <div id="img">
+        <div id="img1">
 
         </div>
         <div class="reach bmn" id="reach">
@@ -112,7 +112,7 @@
         </iframe>
 
         <h2 class="r3">Trimbakeshwar Shiva Temple</h2>
-        <div id="img">
+        <div id="img2">
 
         </div>
         <div class="reach bmn" id="reach">
