--- a/nasik/trek.html
+++ b/nasik/trek.html
@@ -81,7 +81,7 @@
         </iframe>
 
         <h2 class="r3">Sula Vineyards</h2>
-        <div id="img">
+        <div id="img1">
 
         </div>
         <div class="reach bmn" id="reach">
