--- a/nasik/waterfall.html
+++ b/nasik/waterfall.html
@@ -80,7 +80,7 @@
         </iframe>
 
         <h2 class="r3">Someshwar Waterfalls</h2>
-        <div id="img">
+        <div id="img1">
 
         </div>
         <div class="reach bmn" id="reach">
