--- a/pune/trek_and_gardern.html
+++ b/pune/trek_and_gardern.html
@@ -49,7 +49,7 @@
             </ul>
         </div>
         <h2 class="r3">Sinhagad Fort</h2>
-        <div id="img">
+        <div id="imga">
         </div>
         <div class="reach bmn" id="reach">
             <h3 class="r24 bmn">Info</h3>
@@ -87,7 +87,7 @@
         </iframe>
 
         <h4 class="r3">Pune-Okayama Friendship Garden </h4>
-        <div id="img">
+        <div id="imgb">
         </div>
         <div class="reach" id="reach">
             <h3 class="r24 bmn">Info</h3>
