--- a/pune/waterbodies.html
+++ b/pune/waterbodies.html
@@ -85,7 +85,7 @@
         </iframe>
 
         <h4 class="r2 bmn">Pashan Lake </h4>
-        <div id="img">
+        <div id="img1">
 
         </div>
         <div class="reach" id="reach">
