--- a/ajanta_ellora/caves.html
+++ b/ajanta_ellora/caves.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="../images/page genral contents/region-code.png" type="image/x-icon" background-color="white"
         ;>
     <title>Ajanta Ellora | Ajanta caves</title>
-    <link rel="stylesheet" href="css/ajanta_caves.css">
+    <link rel="stylesheet" href="css/caves.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@500&display=swap" rel="stylesheet">
 </head>
@@ -86,7 +86,7 @@
         </iframe>
 
         <h2 class="r3">Ellora Caves</h2>
-        <div id="img">
+        <div id="img1">
 
         </div>
         <div class="reach bmn" id="reach">
