--- a/lonavala/trek_point.html
+++ b/lonavala/trek_point.html
@@ -81,7 +81,7 @@
         </iframe>
 
         <h2 class="r3">Tikona Fort</h2>
-        <div id="img">
+        <div id="img1">
 
         </div>
         <div class="reach bmn" id="reach">
