--- a/mumbai/monuments.html
+++ b/mumbai/monuments.html
@@ -87,7 +87,7 @@
         </iframe>
 
         <h2 class="r3">Chhatrapati Shivaji Maharaj Terminus</h2>
-        <div id="img">
+        <div id="img1">
 
         </div>
         <div class="reach bmn" id="reach">
