started blackbook creatipn

--- a/index.html
+++ b/index.html
@@ -300,28 +300,28 @@
                     <div class="aeimage">
                         <img src="./images/contentimg/ajanta_ellora/Ajanta_Caves.jpg" alt="image ">
                     </div>
-                    <h1 class="hsecondary">Ajanta Caves</h1>
+                    <h1 class="hsecondary">Caves</h1>
                 </a>
             </div>
-            <div class="aename"><a href="ajanta_ellora/ellora_caves.html">
+            <div class="aename"><a href="ajanta_ellora/caves.html">
                     <div class="aeimage">
                         <img src="./images/contentimg/ajanta_ellora/ellora_caves.jpg" alt="image">
                     </div>
-                    <h1 class="hsecondary">Ellora Caves</h1>
+                    <h1 class="hsecondary">Fort</h1>
                 </a>
             </div>
             <div class="aename"><a href="ajanta_ellora/daulatabad_fort.html">
                     <div class="aeimage">
                         <img src="./images/contentimg/ajanta_ellora/Daulatabad_Fort.jpg" alt="image">
                     </div>
-                    <h1 class="hsecondary">Daulatabad fort</h1>
+                    <h1 class="hsecondary">Religious Places</h1>
                 </a>
             </div>
             <div class="aename"><a href="ajanta_ellora/goga_baba_hill.html">
                     <div class="aeimage">
                         <img src="./images/contentimg/ajanta_ellora/gogababahill.jpg" alt="image">
                     </div>
-                    <h1 class="hsecondary">Goga baba hill </h1>
+                    <h1 class="hsecondary">Trek and Zoo</h1>
                 </a>
             </div>
         </div>
