finalisation of project code:0

--- a/index.html
+++ b/index.html
@@ -304,13 +304,21 @@
                         <img src="./images/contentimg/ajanta_ellora/Ajanta_Caves.jpg" alt="image ">
                     </div>
                     <h1 class="hsecondary">Caves</h1>
+                    <ul class="aecaves" id="aecaves">
+                        <li>Ajanta Caves</li>
+                        <li>Ellora Caves</li>
+                    </ul>
                 </a>
             </div>
             <div class="aename"><a href="ajanta_ellora/caves.html">
                     <div class="aeimage">
                         <img src="./images/contentimg/ajanta_ellora/ellora_caves.jpg" alt="image">
                     </div>
-                    <h1 class="hsecondary">Fort</h1>
+                    <h1 class="hsecondary">Monuments</h1>
+                    <ul class="aefort" id="aefort">
+                        <li>Daulatabad Fort</li>
+                        <li>Bibi Ka Maqbara</li>
+                    </ul>
                 </a>
             </div>
             <div class="aename"><a href="ajanta_ellora/daulatabad_fort.html">
@@ -318,6 +326,10 @@
                         <img src="./images/contentimg/ajanta_ellora/Daulatabad_Fort.jpg" alt="image">
                     </div>
                     <h1 class="hsecondary">Religious Places</h1>
+                    <ul class="aerp" id="aerp">
+                        <li>Kailasa Temple</li>
+                        <li>Grishneshwar Temple</li>
+                    </ul>
                 </a>
             </div>
             <div class="aename"><a href="ajanta_ellora/Trek_zoo.html">
@@ -325,6 +337,10 @@
                         <img src="./images/contentimg/ajanta_ellora/gogababahill.jpg" alt="image">
                     </div>
                     <h1 class="hsecondary">Trek and Zoo</h1>
+                    <ul class="aetz" id="aetz">
+                        <li>Goga Baba Hills</li>
+                        <li>Siddharth Garden and Zoo</li>
+                    </ul>
                 </a>
             </div>
         </div>
