--- a/mumbai/caves.html
+++ b/mumbai/caves.html
@@ -44,7 +44,7 @@
                 <li class="other r1" id="other1"><a href="./beach.html">Beach</a></li>
                 <li class="other r1 present" id="other1"><a href="./caves.html">Caves</a></li>
                 <li class="other r1" id="other2"><a href="./monuments.html">Monuments</a></li>
-                <li class="other r1" id="other3"><a href="./zoo_and_gardern.html">zoo_and_Garden</a></li>
+                <li class="other r1" id="other3"><a href="./zoo_and_gardern.html">Zoo and Garden</a></li>
                 <li class="other r1" id="other3"><a href="./mumbai_gallery.html">Gallery</a></li>
             </ul>
         </div>
