--- a/mumbai/mumbai_gallery.html
+++ b/mumbai/mumbai_gallery.html
@@ -37,11 +37,11 @@
     <div class="content">
         <div class="otherplaces">
             <ul class="pn">
-                <li class="other r1" id="other1"><a href="./monuments.html">Monuments</a></li>
-                <li class="other r1" id="other1"><a href="./religious_place.html">Religious places</a></li>
-                <li class="other r1" id="other2"><a href="./trek.html">Trek and Vineyards</a></li>
-                <li class="other r1" id="other3"><a href="./waterfall.html">Waterfall</a></li>
-                <li class="other r1 present" id="other3"><a href="./nasik_gallery.html">Gallery</a></li>                
+                <li class="other r1" id="other1"><a href="./beach.html">Beach</a></li>
+                <li class="other r1" id="other1"><a href="./caves.html">Caves</a></li>
+                <li class="other r1" id="other2"><a href="./monuments.html">Monuments</a></li>
+                <li class="other r1" id="other3"><a href="./zoo_and_gardern.html">Zoo and Garden</a></li>
+                <li class="other r1 present" id="other3"><a href="./mumbai_gallery.html">Gallery</a></li>            
             </ul>
         </div>
         <h1 class="r2 center">Image gallery</h1>
