--- a/mumbai/zoo_and_gardern.html
+++ b/mumbai/zoo_and_gardern.html
@@ -125,12 +125,12 @@
             </p>
             <ul class="hotpn r1" id="hotpn">
                 <h2 class="tmn bmn"> Popular hotels in Mumbai</h2>
-                <li><a href="https://www.google.com/travel/hotels/s/fEtU3">The Leela Mumbai, Resort Style Business Hotel
-                        Near Mumbai Airport</a></li>
+                <li><a href="https://www.google.com/travel/hotels/s/fEtU3">The Leela Mumbai</a></li>
                 <li><a href="https://www.google.com/travel/hotels/s/KaztK">Four Seasons Hotel Mumbai</a></li>
                 <li><a href="https://www.google.com/travel/hotels/s/gnWg9">Grand Hyatt Mumbai Hotel & Residences</a>
                 </li>
                 <li><a href="https://www.google.com/travel/hotels/s/q1mjT">The Oberoi, Mumbai </a></li>
+                <li><a href="https://www.google.com/travel/hotels/s/Soe4j">The Oriental Residency</a></li>
             </ul>
         </div>
 
